<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/dark_green">

        <View
            android:id="@+id/view3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/rounded_avatar"
            android:backgroundTint="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/rounded_avatar"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/rounded_avatar"
            android:backgroundTint="@color/blue"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/rounded_avatar"
            android:backgroundTint="@color/red"
            android:layout_marginStart="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/rounded_avatar"
            android:backgroundTint="@color/grey"
            android:text="@string/avatars_count_label"
            android:textColor="@color/actor_name_white"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginStart="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/viewsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/views_count_example"
            android:textColor="@color/actor_name_white"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/view_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/commentsCount"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/commentsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/comments_count_example"
            android:textColor="@color/actor_name_white"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/comment_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/likesCount"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"
            android:drawablePadding="5dp" />

        <TextView
            android:id="@+id/likesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="991"
            android:textColor="@color/actor_name_white"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/like_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawablePadding="5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>